Added Checkbox and radio buttons and updated workflows

--- a/ReferralManagement/Pages/Index.cshtml
+++ b/ReferralManagement/Pages/Index.cshtml
@@ -7,22 +7,26 @@
 
 <div class="overview">
     <div class="title">
-        <h2 class="section--title">Welcome to MedEx Referral Dashboard</h2>
+        <h2 class="section--title">MedEx Referral Dashboard</h2>
     </div>
-    <div>
-        MedEx Referral Management Dashboard is a comprehensive platform designed to streamline the management of healthcare facilities. With our intuitive and user-friendly interface, managing your medical practice has never been easier.
-    </div>
-    <div class="title">
-        <h2 class="section--title">Key Features</h2>
-    </div>
-    <div>
-        <ul class="feature-list">
-            <li class="feature-item"><strong>Doctor Overview:</strong> Keep track of all your doctors, their schedules, and availability.</li>
-            <li class="feature-item"><strong>Patient Management:</strong> Monitor patient registrations, health status, and appointments.</li>
-            <li class="feature-item"><strong>Real-Time Scheduling:</strong> Schedule appointments and view them in a centralized calendar.</li>
-            <li class="feature-item"><strong>Statistics:</strong> Gain insights with our comprehensive statistical reports on doctors' performance, patient demographics, and more.</li>
-            <li class="feature-item"><strong>Support:</strong> Reach out to our support team for any queries or assistance.</li>
-        </ul>
+    <div class="card card-1">
+        <div class="card--data">
+            <div class="card--content">
+                <p>
+                    MedEx RMS is a cutting-edge healthcare referral management system designed to streamline the process of patient
+                    referrals in healthcare institutions. With MedEx RMS, healthcare providers can efficiently manage and track patient
+                    referrals, ensuring a seamless experience for both healthcare professionals and patients.
+                    <br /><br />
+                    Our application offers a comprehensive set of features to support the referral process. It allows healthcare
+                    providers to register new patients, manage their information, and generate referral requests for various medical
+                    specialties.
+                    <br /><br />
+                    MedEx RMS provides a user-friendly dashboard that offers an overview of the referral status, allowing healthcare
+                    providers to stay organized and prioritize their workload effectively. Our application simplifies the referral
+                    process, reducing administrative burden and enabling healthcare professionals to focus on providing quality care to
+                    their patients.
+                </p>
+            </div>
     </div>
 </div>
 
