--- a/ReferralManagement/Pages/ReferralForms/ReferralForms.cshtml
+++ b/ReferralManagement/Pages/ReferralForms/ReferralForms.cshtml
@@ -24,9 +24,9 @@
                         <td>@dynamicReferral.ReferralName</td>
                         <td>
                             <span>
+                                <a href="/ReferralForm/Form/@dynamicReferral.DynamicReferralId" class="ri-survey-fill"></a>
                                 <a href="/ReferralForm/Edit/@dynamicReferral.DynamicReferralId" class="ri-edit-line edit"></a>
-                                <a href="/ReferralForm/Form/@dynamicReferral.DynamicReferralId" class="ri-survey-line"></a>
-                                <i class="ri-delete-bin-line delete"></i>
+                                <a href="/ReferralForm/Delete/@dynamicReferral.DynamicReferralId" class="ri-delete-bin-line delete"></a>
                             </span>
                         </td>
                     </tr>
