--- a/ReferralManagement/Pages/Shared/_Layout.cshtml
+++ b/ReferralManagement/Pages/Shared/_Layout.cshtml
@@ -8,6 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/site.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <link href="https://unpkg.com/survey-jquery/defaultV2.min.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="https://unpkg.com/survey-jquery/survey.jquery.min.js"></script>
     <title>@ViewData["Title"] - MedEx RMS</title>
 </head>
 
@@ -109,7 +113,8 @@
             @RenderBody()
         </div>
     </section>
-    <script src="js/site.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
