--- a/ReferralManagement/Pages/ReferralForms/ReferralForm.cshtml
+++ b/ReferralManagement/Pages/ReferralForms/ReferralForm.cshtml
@@ -1,8 +1,7 @@
 ﻿@page "/ReferralForm/Form/{id:int}"
 @model ReferralManagement.Pages.ReferralFormModel
 @{
-    var schema = ViewData["Schema"] as Dictionary<string, object>;
-    var fields = schema["fields"] as Newtonsoft.Json.Linq.JArray;
+    
 }
 <div class="overview">
     <div class="title">
@@ -11,55 +10,37 @@
     <div class="title">
         <a href="/ReferralForm/Edit/@Model.DynamicReferral.DynamicReferralId" class="button">Edit Form</a>
     </div>
-    <div class="form-edit">
-    <form method="post">
-        @foreach (var field in fields)
-        {
-            <div class="form-group">
-                <label for="@field["name"]">@field["label"]</label>
 
-                @switch (field["type"].ToString())
-                {
-                    case "text":
-                        <input type="text" id="@field["name"]" name="@field["name"]" class="form-control" />
-                        break;
-                    case "email":
-                        <input type="email" id="@field["name"]" name="@field["name"]" class="form-control" />
-                        break;
-                    case "tel":
-                        <input type="tel" id="@field["name"]" name="@field["name"]" class="form-control" />
-                        break;
-                    case "radio":
-                        foreach (var option in field["options"])
-                        {
-                            <input type="radio" id="@option" name="@field["name"]" value="@option" class="form-check-input" />
-                            <label for="@option">@option</label>
-                        }
-                        break;
-                    case "checkbox":
-                        foreach (var option in field["options"])
-                        {
-                            <input type="checkbox" id="@option" name="@field["name"]" value="@option" class="form-check-input" />
-                            <label for="@option">@option</label>
-                        }
-                        break;
-                    case "select":
-                        <select id="@field["name"]" name="@field["name"]" class="form-control">
-                            @foreach (var option in field["options"])
-                            {
-                                <option value="@option">@option</option>
-                            }
-                        </select>
-                        break;
-                    default:
-                        <input type="text" id="@field["name"]" name="@field["name"]" class="form-control" />
-                        break;
-                }
-                </div>
-        
+    <div class="form-edit">
+        <div id="surveyContainer"></div>
+    </div>
+</div>
+
+@section scripts {
+
+    <script type="text/javascript">
+        var surveyJson = @Html.Raw(Model.DynamicReferral.ReferralJson);
+
+
+        const survey = new Survey.Model(surveyJson);
+        survey.focusFirstQuestionAutomatic = false;
+
+        //const npsQuestion = survey.getQuestionByName("first-name");
+
+        function alertResults(sender) {
+           const results = JSON.stringify(sender.data);
+           alert(results);
         }
-        <input type="submit" value="Submit Referral" class="btn btn-primary" />
-    </form>
-</div>
-</div>
+
+        survey.onComplete.add(alertResults);
+
+        $(function () {
+           $("#surveyContainer").Survey({ model: survey });
+        });
+
+        //survey = npsQuestion.value = "Aaron";
+
+    </script>
+
+}
 
